--- a/botsettings.json
+++ b/botsettings.json
@@ -1,8 +1,8 @@
 {
-    "token": "Token",
-    "prefix": "w!",
-    "server": "wyliegdps02.7m.pl/database",
-    "customStatus": "WGDPS",
+    "token": "MTAxMjgwNjE0NDAzODgxNzgwMg.G0sCST.6mwKGYCB_oHDs2YdGSK8I4ILkyQR1XERF6KPn4",
+    "prefix": "=",
+    "server": "https://ufgdps.crystalcloud.xyz/gd/tools/",
+    "customStatus": "UnlefuGD..",
     "commandColour": "37D0DA",
     "__Emote Comment__": "These are all the emotes for the bot, you need to set them up yourself if you want the bot to look nice",
     "star": "<:GDstar:735563775209635972>",
