--- a/botsettings.json
+++ b/botsettings.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTAxMjgwNjE0NDAzODgxNzgwMg.G0sCST.6mwKGYCB_oHDs2YdGSK8I4ILkyQR1XERF6KPn4",
+    "token": "MTAxMjgwNjE0NDAzODgxNzgwMg.GvhqE5.N5e2QXkQSnokq8dRc3nLKeJoPDHelen1x3-xJE",
     "prefix": "=",
     "server": "https://ufgdps.crystalcloud.xyz/gd/tools/",
     "customStatus": "UnlefuGD..",
