--- a/botsettings.json
+++ b/botsettings.json
@@ -1,7 +1,7 @@
 {
-    "token": "Token",
-    "prefix": "w!",
-    "server": "wyliegdps02.7m.pl/database",
+    "token": "MTAxMjgwNjE0NDAzODgxNzgwMg.GvhqE5.N5e2QXkQSnokq8dRc3nLKeJoPDHelen1x3-xJE",
+    "prefix": "=",
+    "server": "https://ufgdps.crystalcloud.xyz/gd/tools",
     "customStatus": "WGDPS",
     "commandColour": "37D0DA",
     "__Emote Comment__": "These are all the emotes for the bot, you need to set them up yourself if you want the bot to look nice",
