--- a/botsettings.json
+++ b/botsettings.json
@@ -1,8 +1,8 @@
 {
-    "token": "Token",
-    "prefix": "w!",
-    "server": "wyliegdps02.7m.pl/database",
-    "customStatus": "WGDPS",
+    "token": "MTAxMjgwNjE0NDAzODgxNzgwMg.Gh1ale.93eoSTCrXiS4lSNurAn71calHnIeOrZXLrE184",
+    "prefix": "=",
+    "server": "http://ufgdps.crystalcloud.xyz/gd/tools/",
+    "customStatus": "Unlefun..",
     "commandColour": "37D0DA",
     "__Emote Comment__": "These are all the emotes for the bot, you need to set them up yourself if you want the bot to look nice",
     "star": "<:GDstar:735563775209635972>",
